change api and improve design

--- a/src/components/Tokens.module.css
+++ b/src/components/Tokens.module.css
@@ -4,14 +4,9 @@
 }
 .tokenBlock {
     display: inline-block;
-    min-width: 10%;
-    padding: 6px;
+    padding: 4px 8px;
     margin: 0 10px 10px 0;
 }
 .tokenBlock:hover {
-    cursor: pointer;
     background-color: #CFD4EC;
-}
-.tokenSmall {
-    font-size: 12px;
 }
